Added dotenv npm

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap4": "0.0.1-security",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^4.0.0",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
     "knex": "^0.13.0",
