--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^4.0.0",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
+    "jquery": "^3.2.1",
     "knex": "^0.13.0",
     "morgan": "~1.9.0",
     "pg": "^7.3.0",
