--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "knex": "^0.13.0",
     "morgan": "~1.9.0",
     "pg": "^7.3.0",
+    "request": "^2.83.0",
     "sass": "^1.0.0-beta.2",
     "scss": "^0.2.4",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "urlencode": "^1.1.0"
   }
 }
