Updated example.env with Amazon entries

--- a/example.env
+++ b/example.env
@@ -5,3 +5,6 @@ hostname=YOUR_HOSTNAME
 port=YOUR_PORT
 ssl=true
 GOOGLE_BOOKS_API=YOUR_GOOGLE_BOOKS_API_KEY
+AMAZON_API=YOU_AMAZON_API_KEY
+AMAZON_ASSOCIATE=YOUR_AMAZON_ASSOCIATE_ID
+AMAZON_SECRET=YOUR_AMAZON_SECRET_KEY
