--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jquery": "^3.2.1",
     "knex": "^0.13.0",
     "morgan": "~1.9.0",
+    "nodemailer": "^4.3.1",
     "pg": "^7.3.0",
     "request": "^2.83.0",
     "sass": "^1.0.0-beta.2",
